# IMBS-Promo-Spreadsheet-Maker

./: .gitignore  client_secrets.json  gDriveUploader.py  helper.py  input.xlsx  inputHandler.py  listMaker.py  listaIBMS.xlsx  lista_IBMS.xlsx  lista_IBMS2.xlsx  main.py  main_test.py  mycreds.txt  naming.py  prueba.xlsx  prueba2.xlsx  pruebasTidier.py  pyproject.toml  readExcel.py  write2excel.py  write2excelv2.py  ~$input.xlsx
