[tool.poetry]
name = "excelautomated"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.5"
pydrive = "^1.3.1"
unidecode = "^1.1.1"
autopep8 = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
